--- a/RustStarterKitPlugin/RustStarterKitPlugin/RustStarterKitPlugin.csproj
+++ b/RustStarterKitPlugin/RustStarterKitPlugin/RustStarterKitPlugin.csproj
@@ -31,7 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="RustStartKit.cs" />
+    <Compile Include="StarterKit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
